@@ -6,7 +6,7 @@ define('PKG_NAME_LOWER',strtolower(PKG_NAME));
 
 define('PKG_VERSION','1.0.4');
 define('PKG_RELEASE','pl');
-define('PKG_AUTO_INSTALL', false);
+define('PKG_AUTO_INSTALL', true);
 
 /* define paths */
 if (isset($_SERVER['MODX_BASE_PATH'])) {
